--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/LSSD.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Santos Sheriff Department - Bewerbung</title>
-
-    <!-- CSS-Datei einbinden -->
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-
     <div class="container">
       <header class="header">
-        <div class="">
-          <div class=""></div>
-        </div>
         <h1 class="title">LOS SANTOS SHERIFF DEPARTMENT</h1>
         <p class="subtitle">Protect and Serve</p>
       </header>
@@ -59,7 +53,7 @@
             <h3 class="form-section-title">Bewerbungsfragen</h3>
 
             <div class="form-group">
-              <label for="experience">Haben Sie bereits Erfahrung in anderen Staats Fraktionen?
+              <label for="experience">Haben Sie bereits Erfahrung in anderen Staats Fraktionen?</label>
               <textarea id="experience" name="experience" rows="4" required></textarea>
             </div>
 
@@ -120,6 +114,135 @@
       </footer>
     </div>
 
-    <script type="module" src="/script.js"></script>
+    <script>
+      const WEBHOOK_URL = 'https://discord.com/api/webhooks/1430490370835218552/6b8rXAUjteRbedVUN8_mJ-rkcIRW2aRDoasFRpoArGnB8Qlfv7Dhrj7fmVi5ZnyoMlGG';
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const form = document.getElementById('applicationForm');
+        const successMessage = document.getElementById('successMessage');
+
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+
+          const submitBtn = form.querySelector('.submit-btn');
+          const originalText = submitBtn.innerHTML;
+          submitBtn.innerHTML = '<span>Wird gesendet...</span>';
+          submitBtn.disabled = true;
+
+          const formData = new FormData(form);
+          const data = Object.fromEntries(formData.entries());
+
+          const embed = {
+            title: 'Neue Bewerbung - Los Santos Sheriff Department',
+            color: 13938487,
+            fields: [
+              {
+                name: 'Persönliche Informationen',
+                value: '▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬',
+                inline: false
+              },
+              {
+                name: '(IC) Vorname Nachname:',
+                value: data.fullName || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: '(IC) Alter:',
+                value: data.age || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: '(IC) Telefonnummer:',
+                value: data.phone || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: 'E-Mail:',
+                value: data.email || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: 'Bewerbungsfragen',
+                value: '▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬',
+                inline: false
+              },
+              {
+                name: 'Erfahrung in anderen Staats Fraktionen:',
+                value: data.experience || 'Nicht angegeben',
+                inline: false
+              },
+              {
+                name: 'Motivation für LSSD:',
+                value: data.motivation || 'Nicht angegeben',
+                inline: false
+              },
+              {
+                name: 'Stärken und Schwächen:',
+                value: data.strengths || 'Nicht angegeben',
+                inline: false
+              },
+              {
+                name: 'Umgang mit stressigen Situationen:',
+                value: data.situation || 'Nicht angegeben',
+                inline: false
+              },
+              {
+                name: 'Aktive Zeiten im Dienst:',
+                value: data.availability || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: 'Vorstrafen:',
+                value: data.criminal || 'Nicht angegeben',
+                inline: true
+              },
+              {
+                name: 'Zusätzliche Informationen:',
+                value: data.additional || 'Keine',
+                inline: false
+              }
+            ],
+            footer: {
+              text: 'Los Santos Sheriff Department - Bewerbungssystem'
+            },
+            timestamp: new Date().toISOString()
+          };
+
+          try {
+            const response = await fetch(WEBHOOK_URL, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                embeds: [embed],
+                username: data.fullName || 'LSSD Bewerbungssystem'
+              })
+            });
+
+            if (response.ok) {
+              form.reset();
+              successMessage.classList.remove('hidden');
+              
+              setTimeout(() => {
+                successMessage.classList.add('hidden');
+              }, 5000);
+            } else {
+              const errorText = await response.text();
+              console.error('Discord API Error:', errorText);
+            }
+          } catch (error) {
+            console.error('Network Error:', error);
+          } finally {
+            submitBtn.innerHTML = originalText;
+            submitBtn.disabled = false;
+          }
+        });
+
+        successMessage.addEventListener('click', () => {
+          successMessage.classList.add('hidden');
+        });
+      });
+    </script>
   </body>
 </html>
